--- a/style.css
+++ b/style.css
@@ -87,3 +87,36 @@ header p {
 #tab-content ul {
   list-style-type: none;
 }
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+/* Modal content */
+.modal-content {
+  display: block;
+  margin: 0 auto;
+  max-width: 80%;
+  max-height: 80%;
+  position: relative;
+}
+
+/* Close button */
+.close {
+  color: #ccc;
+  font-size: 30px;
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  cursor: pointer;
+}
+
+
